fdo#73549 do not attempt to resolve an empty locale

... to match installed UI locales

Change-Id: If0ad0fde392bc5ea3cf454f4858330f5e93a6666
(cherry picked from commit 8e826c7ff7c597e9f585377b2117f4dc24239dcc)

fdo#73549 do not resolve empty locale here if not determined yet

Change-Id: Iad03d6209a2b4024b27c6195195e5aa557c295fe
(cherry picked from commit db6f8f9f8969b592ed90c841960fdd186e1cbc5a)

do not resolve empty locale here when set, fdo#73549 related

Change-Id: Id9c8c3926f64826fd2295e0f75f007ce435f5915
(cherry picked from commit 26fc9be1bf2d6aaeb52a571ea416f4527a52e146)
Reviewed-on: https://gerrit.libreoffice.org/7530
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>